--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "server",
+  "name": "simpleblog-server",
   "version": "1.0.0",
   "description": "server side",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node app.js"
   },
   "author": "Ignacio Montero",
   "license": "ISC",
@@ -12,5 +13,6 @@
     "express": "^4.16.3",
     "mongoose": "^5.0.12",
     "nodemon": "^1.17.2"
-  }
+  },
+  "devDependencies": {}
 }
